add first section without elipse

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,9 @@
     <main>
         <!-- header + первая секция -->
         <section class="main-section">
-            <!-- Макс.размер страницы в section -->
+            <!-- header -->
             <header class="main-section__header section">
+                <!-- Макс.размер страницы зашит в section -->
                 <div class="main-section__logo">
                     <a href="#"><img src="./img/logo.svg" alt="Логотип гитариста Виктора"></a>
                 </div>
@@ -27,6 +28,7 @@
                     </ul>
                 </nav>
             </header>
+            <!-- первая секция -->
             <div class="main-section__content section">
                 <!-- картинки первой секции -->
                 <div class="left-wrapper">
@@ -36,16 +38,30 @@
                     <div class="left-wrapper__rectangle-orange"></div>
                     <div class="left-wrapper__rectangle-grey"></div>
                 </div>
+                <!-- основной блок первой секции -->
                 <div class="right-wrapper">
-
-
+                    <div class="right-wrapper__social">
+                        <img src="./icons/Skype.png" alt="Написать Виктору в Скайпе" class="right-wrapper__icon">
+                        <img src="./icons/VK.png" alt="Написать Виктору в ВКонтакте" class="right-wrapper__icon">
+                        <img src="./icons/Telegram.png" alt="Написать Виктору в Телеграме" class="right-wrapper__icon">
+                        <img src="./icons/instagram.png" alt="Написать Виктору в Инстаграме"
+                            class="right-wrapper__icon">
+                    </div>
+                    <h1 class="right-wrapper__tittle">Я Виктор</h1>
+                    <hr class="right-wrapper__line">
+                    <p class="right-wrapper__text">Репетитор игры на гитаре с семилетним опытом преподавания</p>
+                    <div class="right-wrapper__registration registration">
+                        <button class="registration__button">Забронировать <br> урок</button>
+                        <a href="#" class="registration__link-social"><img src="./icons/chat.svg"
+                                alt="Написать Виктору"></a>
+                        <p class="registration__text">Есть <br> вопросы?</p>
+                    </div>
                 </div>
-
-
+                <!-- Круги -->
+                <div class="main-section__first-elipse elipse">
+                    <div class="elipse__subtract"></div>
+                </div>
             </div>
-
-
-
         </section>
 
 
