add fonts and links

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
                 <!-- навигация -->
                 <nav class="header__nav nav">
                     <ul class="nav__list">
-                        <li class="nav__link"><a href="#">Обо мне</a></li>
-                        <li class="nav__link"><a href="#">Занятия</a></li>
+                        <li class="nav__link"><a href="#about-me">Обо мне</a></li>
+                        <li class="nav__link"><a href="#lessons">Занятия</a></li>
                         <li class="nav__link"><a href="#">Запись</a></li>
                     </ul>
                 </nav>
@@ -85,7 +85,7 @@
             </div>
         </section>
         <!-- вторая секция -->
-        <section class="type-lessons section">
+        <section class="type-lessons section" id="about-me">
             <h2>Преподаю</h2>
             <hr>
             <!-- картинки с гитарами -->
@@ -145,7 +145,7 @@
             </div>
         </section>
         <!-- Третья секция -->
-        <section class="text-about">
+        <section class="text-about" id="lessons">
             <div class="text-about__section section">
                 <!-- Картинки -->
                 <div class="text-about__left-wrapper">
