add mobile adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <header class="main-section__header container">
                 <!-- Макс.размер страницы зашит в section -->
                 <div class="main-section__logo">
-                    <a href="#"><img src="./img/logo.svg" alt="Логотип гитариста Виктора"></a>
+                    <a href="#"><img src="./img/logo.svg" alt="Логотип репетитора по гитаре, Виктора"></a>
                 </div>
                 <!-- навигация -->
                 <nav class="header__nav nav">
@@ -78,7 +78,8 @@
                         <img src="./icons/Skype.png" alt="Написать Виктору в Скайпе" class="social__icon">
                         <img src="./icons/VK.png" alt="Написать Виктору в ВКонтакте" class="social__icon">
                         <img src="./icons/Telegram.png" alt="Написать Виктору в Телеграме" class="social__icon">
-                        <img src="./icons/instagram.png" alt="Написать Виктору в Инстаграме" class="social__icon">
+                        <img src="./icons/instagram.png" alt="Написать Виктору в Инстаграме"
+                            class="social__icon social__icon_last">
                     </div>
                     <h1 class="right-wrapper__tittle">Я Виктор</h1>
                     <hr class="right-wrapper__line">
@@ -104,8 +105,10 @@
         <!-- вторая секция -->
         <section class="type-lessons" id="about-me">
             <div class="type-lessons__container container">
-                <h2>Преподаю</h2>
-                <hr>
+                <div class="type-lessons__tittle">
+                    <h2>Преподаю</h2>
+                    <hr>
+                </div>
                 <!-- картинки с гитарами -->
                 <div class="type-lessons__guitars guitar">
                     <div class="guitar__block guitar__block_grey">
@@ -174,6 +177,7 @@
                         <h2>Обучение</h2>
                         <hr>
                     </div>
+                    <!-- круги -->
                     <img src="./icons/rectangle-with-lines.svg" alt="Декоративный узор сайта"
                         class="text-about__rectangle-striped">
                     <div class="text-about__first-elipse elipse-m">
@@ -187,8 +191,10 @@
                             <hr class="tittle-hr">Готовлю <br> виртуозов
                         </h2>
                     </div>
-                    <p class="main-text__paragraph main-text__paragraph_first">Хотите научиться играть на гитаре или
-                        укулеле? Тогда я готов помочь вам! Моя методика основана на индивидуальном подходе к каждому
+                    <p class="main-text__paragraph main-text__paragraph_first"> <span>Хотите научиться играть на гитаре
+                            или
+                            укулеле? Тогда я готов помочь вам! </span> Моя методика основана на индивидуальном подходе к
+                        каждому
                         ученику. Мы будем работать над техникой игры на инструменте, изучать аккорды и
                         мелодии, а также развивать музыкальный слух. Благодаря моим урокам вы сможете быстро овладеть
                         игрой на гитаре или укулеле и наслаждаться музыкой!</p>
@@ -205,8 +211,8 @@
                         <p class="registration__text">Есть <br> вопросы?</p>
                     </div>
                 </div>
-                <!-- круги -->
             </div>
+            <!-- круги -->
             <div class="text-about__second-elipse elipse-m">
                 <div class="elipse-m__subtract"></div>
             </div>
